--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ a:hover {
     top: 20px !important;
     right: 20px !important;
     z-index: 1001 !important;
+    border-top: none !important;
 }
 
 .dg {
